BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Requirement_vod__c.object
<CustomObject>
    <fields>
        <fullName>Status_PMO__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Identify: New Requirement</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Identify: Submit for Review</fullName>
                <color>#FF6666</color>
            </picklistValues>
            <picklistValues>
                <fullName>Identify: Deferred</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Approve: Approved to Deploy</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidate: Approve to Estimate</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidate: Pending PMO Approval</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Design</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Build</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Ready to Migrate</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Pending for Interfaces</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Release: SIT</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Release: Test</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>Release: UAT</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Deployed</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Duplicate</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>Close: Rejected</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap: Submit for Review</fullName>
                <color>#6600CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap: On Roadmap</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap: Rejected</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed &amp; Canceled</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>More Info Needed</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap Rejected</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Tested - Pending PROD Migration</fullName>
                <color>#F96FB7</color>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva Roadmap</fullName>
                <color>#2F5D85</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Process__c</fullName>
        <inlineHelpText>Include information about the impacts the functionality will have to the end user. Specifically, what they will see on the interface, how often the data will be updated, etc.</inlineHelpText>
        <label>Sub-Process</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Superseded_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Superseded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Superseded_By_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superseded By</label>
        <referenceTo>Requirement_vod__c</referenceTo>
        <relationshipLabel>Requirements (Superseded By)</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Superseded_By_External_ID_BMS__c</fullName>
        <formula>Superseded_By_BMS__r.External_ID_BMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Superseded By : External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Impact_Value__c</fullName>
        <formula>CASE(
Support_Impact__c ,
&quot;HIGH&quot; , 1, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 3, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Support Impact Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Impact__c</fullName>
        <inlineHelpText>Will Minimally Impact Support
(i.e., low degree of training and documentation)</inlineHelpText>
        <label>Support Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Impacted__c</fullName>
        <description>List of applications impacted by SFA change requests.</description>
        <inlineHelpText>List of SaaS applications.</inlineHelpText>
        <label>Impacted Applications</label>
        <picklist>
            <picklistValues>
                <fullName>Data Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - Field User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware - HQ User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>System_Version_BMS__c</fullName>
        <label>System Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Description__c</fullName>
        <label>Technical Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <label>Test Case</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Comments__c</fullName>
        <label>Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Status__c</fullName>
        <label>Test Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Differed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested - Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested - Unsuccessful</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tested_By__c</fullName>
        <label>Tested By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotEst__c</fullName>
        <description>Total estimated value.</description>
        <formula>( Req__c  +  Des__c  +  BUT__c  +  SIT__c  +  UAT__c  +  TrnDep__c  +  Adapt__c )+  
( 1*Cont__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total estimated value.</inlineHelpText>
        <label>Total Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Actual__c</fullName>
        <formula>Actual_Requirements_Gathering__c +  Actual_Design__c +  Actual_Build_Unit_Test__c +  Actual_SIT__c  +  Actual_UAT__c  +  Actual_Train_Deploy__c +  Actual_Adapt_Ongoing_Support__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Priority_Ranking__c</fullName>
        <formula>( Business_Benefit_Value__c * 0.20 + Urgency_of_Request_Value__c * 0.12 + End_User_Impact_Value__c * 0.12+ Legal_Compliance_Value__c * 0.20 + Support_Impact_Value__c * 0.12+ Level_of_Business_Effort_Value__c * 0.12 + Level_of_IT_Effort_Value__c * 0.12 ) / 7</formula>
        <label>Total Priority Ranking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Variance__c</fullName>
        <formula>TotEst__c  -  Total_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of days.</description>
        <inlineHelpText>Total number of days estimated.</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Impact_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created TT 2013/09/27. Used to flag requirements that need a specific focus during Training or Change Management.</description>
        <label>Training Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrnDep__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Training and Deploying.</description>
        <inlineHelpText>Number of days estimated for Training and Deploying.</inlineHelpText>
        <label>Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete UAT.</description>
        <inlineHelpText>Number of days estimated to complete UAT.</inlineHelpText>
        <label>UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request_Value__c</fullName>
        <description>Value is calculated by the selection of the Urgency of Request field.</description>
        <formula>CASE(
 Urgency_of_Request__c ,
&quot;HIGH&quot; , 3, 
&quot;MEDIUM&quot;, 2, 
&quot;Low&quot;, 1, 
0 
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Urgency of Requirement field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Urgency of Requirement Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Urgency_of_Request__c</fullName>
        <inlineHelpText>Low: Not required within the next 90 days to enable a business process 
Medium: Required within the next 46 – 90 days to enable a business process 
High: Required within the next 30 – 45 days to enable a business process</inlineHelpText>
        <label>Urgency of Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change_Value__c</fullName>
        <description>Value is calculated by the User Impact of Change field.</description>
        <formula>CASE(
 User_Impact_of_Change__c ,
&quot;High&quot;,1,
&quot;Medium&quot;,2,
3
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the User Impact of Change field: 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>User Impact of Change Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Impact_of_Change__c</fullName>
        <inlineHelpText>Low: Will Significantly Impact Users (high degree of adoption with significant effort) 
Medium: Will Moderately Impact Users (high degree of adoption with moderate effort) 
High: Will Minimally Impact Users (high degree of adoption with minimal effort)</inlineHelpText>
        <label>User Impact of Change</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Requirement_Area__c</fullName>
        <label>User Requirement Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Values_BMS__c</fullName>
        <label>Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Veeva_Build_Date__c</fullName>
        <label>Veeva Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Veeva_Configuration_Complexity__c</fullName>
        <label>Veeva Configuration Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veeva_Design_Date__c</fullName>
        <label>Veeva Design Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Veeva_ID__c</fullName>
        <label>Veeva ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veeva_Out_Of_Box__c</fullName>
        <label>Veeva Out Of Box</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veeva_Rank__c</fullName>
        <label>Veeva Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veeva_Response_BMS__c</fullName>
        <label>Veeva Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Veeva_Status__c</fullName>
        <label>Veeva Status</label>
        <picklist>
            <picklistValues>
                <fullName>Current Veeva Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit for Roadmap Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roadmap Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Planned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verified_by_BMS_EMEA__c</fullName>
        <description>Created by TT 27/09/2013. All requirements must be Verified by BMS EMEA first.</description>
        <label>Approved BMS EMEA?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All_CRs</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Title__c</columns>
        <columns>InterAct_Process_BMS_EMEA__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Comments__c</columns>
        <columns>Verified_by_BMS_EMEA__c</columns>
        <columns>Needs_BMS_Global_Approval_BMS_EMEA__c</columns>
        <columns>Approved_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Requirement_vod__c.BMS_EMEA_CORE_Change_Request</value>
        </filters>
        <label>All CRs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Build_All_Requirements</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Title__c</columns>
        <columns>InterAct_Process_BMS_EMEA__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Comments__c</columns>
        <columns>Verified_by_BMS_EMEA__c</columns>
        <columns>Needs_BMS_Global_Approval_BMS_EMEA__c</columns>
        <columns>Approved_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_PMO__c</field>
            <operation>equals</operation>
            <value>Release: Build</value>
        </filters>
        <label>Build: All Requirements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reqs_CRs_not_verified_by_BMS_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Title__c</columns>
        <columns>InterAct_Process_BMS_EMEA__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Comments__c</columns>
        <columns>Verified_by_BMS_EMEA__c</columns>
        <columns>Needs_BMS_Global_Approval_BMS_EMEA__c</columns>
        <columns>Approved_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Verified_by_BMS_EMEA__c</field>
            <operation>equals</operation>
        </filters>
        <label>Reqs &amp; CRs not verified by BMS EMEA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reqs_CRs_with_Integration_Impact</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Title__c</columns>
        <columns>InterAct_Process_BMS_EMEA__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Comments__c</columns>
        <columns>Verified_by_BMS_EMEA__c</columns>
        <columns>Needs_BMS_Global_Approval_BMS_EMEA__c</columns>
        <columns>Approved_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Integration_Impact_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reqs &amp; CRs with Integration Impact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Reqs_CRs_with_Training_Impact</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Title__c</columns>
        <columns>InterAct_Process_BMS_EMEA__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Comments__c</columns>
        <columns>Verified_by_BMS_EMEA__c</columns>
        <columns>Needs_BMS_Global_Approval_BMS_EMEA__c</columns>
        <columns>Approved_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training_Impact_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Reqs &amp; CRs with Training Impact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sample_Reports</fullName>
        <columns>NAME</columns>
        <columns>Requirement_Title__c</columns>
        <columns>InterAct_Process_BMS_EMEA__c</columns>
        <columns>Access_BMS_EMEA__c</columns>
        <columns>Home_Office_BMS__c</columns>
        <columns>Sales_BMS__c</columns>
        <columns>MSL_BMS__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Comments__c</columns>
        <columns>Verified_by_BMS_EMEA__c</columns>
        <columns>Needs_BMS_Global_Approval_BMS_EMEA__c</columns>
        <columns>Approved_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InterAct_Process_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>Sample Reports</value>
        </filters>
        <label>Sample Reports</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sampling_Requirements</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Requirement_Title__c</columns>
        <columns>Access_BMS_EMEA__c</columns>
        <columns>MSL_BMS__c</columns>
        <columns>Home_Office_BMS__c</columns>
        <columns>Sales_BMS__c</columns>
        <columns>InterAct_Process_BMS_EMEA__c</columns>
        <columns>Status_PMO__c</columns>
        <columns>Comments__c</columns>
        <columns>Verified_by_BMS_EMEA__c</columns>
        <columns>Needs_BMS_Global_Approval_BMS_EMEA__c</columns>
        <columns>Approved_BMS_EMEA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>InterAct_Process_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>Sample Adjustments,Sample Allocation,Sample Disbursements,Sample Inventory</value>
        </filters>
        <filters>
            <field>InterAct_Process_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>Sample Management,Sample Ordering,Sample Returns</value>
        </filters>
        <filters>
            <field>InterAct_Process_BMS_EMEA__c</field>
            <operation>equals</operation>
            <value>Sample Shipments,Sample Transfers</value>
        </filters>
        <label>Sampling Requirements BMS EMEA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Requirement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_CORE_Change_Request</fullName>
        <active>true</active>
        <description>Used for managing BMS EMEA Core Change Requests.</description>
        <label>BMS EMEA CORE Change Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_COUNTRY_Requirement</fullName>
        <active>true</active>
        <description>Used for managing BMS EMEA Core Change Requests.</description>
        <label>BMS EMEA COUNTRY Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_Functional_Requirement</fullName>
        <active>true</active>
        <description>Used for managing BMS EMEA Core Requirements.</description>
        <label>BMS EMEA CORE Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_EMEA_UPSA_Requirement</fullName>
        <active>true</active>
        <description>BMS EMEA UPSA: Requirement specific to UPSA France</description>
        <label>BMS EMEA UPSA Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>BMS_MEA_Requirement</fullName>
        <active>true</active>
        <label>BMS MEA Requirement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Requirement_Record_Type</fullName>
        <active>false</active>
        <label>Business Requirement Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Functional_Requirement_Record_Type</fullName>
        <active>false</active>
        <description>Used for managing FR records</description>
        <label>Functional Requirement Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ICV_Requirements</fullName>
        <active>false</active>
        <description>Used for managing ICV requirements</description>
        <label>ICV Requirements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interface_Requirements_Type</fullName>
        <active>false</active>
        <description>Record type to support interface requirements</description>
        <label>Interface Requirements Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>MS_SMB_Record_Type</fullName>
        <active>false</active>
        <description>Used for managing Managed Serviced and SMB requirements</description>
        <label>MS/SMB Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Enhancement_R</fullName>
        <active>false</active>
        <label>Product Enhancement Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Requirement_Record_Type</fullName>
        <active>false</active>
        <description>Used for managing UR records</description>
        <label>User Requirement Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BMS_EMEA_CR_not_closed_without_Release</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 RecordType.DeveloperName = &apos;BMS_EMEA_CORE_Change_Request&apos;,
ISPICKVAL(Status_PMO__c, &apos;Release: SIT&apos;),
 Release__c = &apos;&apos;
)</errorConditionFormula>
        <errorMessage>The Change Request cannot be closed without a targeted Release date. Please confirm the Release date with the Team first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Positive_Effort</fullName>
        <active>true</active>
        <description>All numbers entered under level of effort should be positive.</description>
        <errorConditionFormula>OR( Adapt__c &lt; 0,  BUT__c &lt; 0, Des__c &lt; 0, SIT__c &lt; 0, TrnDep__c &lt; 0, UAT__c &lt;0, Req__c &lt;0)</errorConditionFormula>
        <errorMessage>Please enter a value greater than 0 for fields under Total Level of Effort.</errorMessage>
    </validationRules>
</CustomObject>